# render_toy

./: .gitignore  CMakeLists.txt  README.md
data/: all_1nm_data.xls
ext/: CMakeLists.txt
ext/cpptoml/: CMakeLists.txt  cpptoml.h
ext/stb/: CMakeLists.txt  stb_image_write.h
ext/tinyobj/: CMakeLists.txt
scenes/cornell-box/: CornellBox-Original.toml  scene.toml
scenes/cornell-box/components/: backWall.6ec0e67a-0ddb-e6da-7d14-609f08cde42f.ma  ceiling.7f3305db-9c38-9f3c-643d-d26748750e97.ma  floor.05898a9d-c605-2e4a-f0c0-04b5b443e40c.ma  leftWall.c144d7c9-8b0d-f5cb-c103-8273055097c8.ma  leftWall.e31027dd-fd76-a92b-dacb-7e6df1485616.ma  light.07803fae-c660-3103-aa23-e067c30451a2.ma  rightWall.f5af652a-de74-619f-9be6-5da631eb5390.ma  shortBox.5c72aef6-8ff9-1cfe-0292-62a43de0c3aa.ma
scenes/prism/: prism.toml  scene.toml
scenes/prism/components/: Ground_Plane.de3e33dc-ebcb-5da3-0449-57b9dfe4a568.ma  Light_Plane.001.037b44a8-5de2-2758-93a8-12bb0ecda5d5.ma  Prism_Cylinder.ddb4f9d8-3d5b-3685-7763-d95b0a4bb1da.ma  Screen_Plane.002.431e4a4d-5201-4d1b-53b3-1093263f084b.ma
src/: CMakeLists.txt  Context.cpp  Context.h  cmf.h  color.h  config.h.in  copy_objects.cmake  d65.h  defs.h  exceptions.h  integrator.cpp  integrator.h  main.cpp  math_consts.h  obj2ma.cpp  path_tracing.cpp  path_tracing.h  pipeline.cu  pipeline.h  random.h  rotation.h  scene.cpp  scene.h  spectral_upsampling.cpp  spectral_upsampling.h  texture.cpp  texture.h  vec_math.h
src/ext/: CMakeLists.txt
src/ext/cpptoml/: cpptoml.h
src/ext/glew/: CMakeLists.txt
src/ext/glew/include/GL/: CMakeLists.txt
src/ext/stb/: stb_image.h
src/ext/tinyobj/: CMakeLists.txt
